--- a/main.yml
+++ b/main.yml
@@ -8,3 +8,8 @@
     - role: elliotweiser.osx-command-line-tools
     - role: geerlingguy.mac.homebrew
       tags: ['homebrew']
+  
+  tasks:
+    - import_tasks: tasks/cli.yml
+      name: Install command line utilities
+      tags: ['cli']
