--- a/tasks/python.yml
+++ b/tasks/python.yml
@@ -21,5 +21,7 @@
         bin: youtube-dl
       - name: black
         bin: black
+      - name: speedtest-cli
+      - bin: speedtest
   args:
     creates: $HOME/.local/bin/{{ item.bin }}
