--- a/default.config.yml
+++ b/default.config.yml
@@ -83,8 +83,7 @@ homebrew_cask_apps:
   - discord
   - android-studio
   - visual-studio-code
-  - visual-studio-code-insiders
-  - flipper
+  # - flipper
   - postman
   - pycharm
   - wechat
