--- a/main.yml
+++ b/main.yml
@@ -2,7 +2,6 @@
 - hosts: all
 
   vars_files:
-    - default.config.yml
     - config.yml
 
   roles:
@@ -16,6 +15,6 @@
     - name: node
       import_tasks: tasks/node.yml
       tags: ['cli', 'node']
-    - name: node
+    - name: pytyon
       import_tasks: tasks/python.yml
       tags: ['cli', 'python']
